--- a/tpc-resto-equipo-17B/tpc-resto-equipo-17B.csproj
+++ b/tpc-resto-equipo-17B/tpc-resto-equipo-17B.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ABMMeseros.aspx" />
+    <Content Include="AgregarArticulo.aspx" />
     <Content Include="Articulos.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -194,6 +195,13 @@
     </Compile>
     <Compile Include="ABMMeseros.aspx.designer.cs">
       <DependentUpon>ABMMeseros.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AgregarArticulo.aspx.cs">
+      <DependentUpon>AgregarArticulo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AgregarArticulo.aspx.designer.cs">
+      <DependentUpon>AgregarArticulo.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
