--- a/DOMINIO/DOMINIO.csproj
+++ b/DOMINIO/DOMINIO.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Gerente.cs" />
     <Compile Include="Mesero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoArticulo.cs" />
     <Compile Include="Usuarios.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
