--- a/NEGOCIO/NEGOCIO.csproj
+++ b/NEGOCIO/NEGOCIO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ArticuloNegocio.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoArticuloNegocio.cs" />
     <Compile Include="UsuarioNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
