--- a/NEGOCIO/NEGOCIO.csproj
+++ b/NEGOCIO/NEGOCIO.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="ArticuloNegocio.cs" />
+    <Compile Include="GerenteNegocio.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="MeseroNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
