--- a/DOMINIO/DOMINIO.csproj
+++ b/DOMINIO/DOMINIO.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Articulo.cs" />
     <Compile Include="Gerente.cs" />
+    <Compile Include="Mesa.cs" />
     <Compile Include="Mesero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoArticulo.cs" />
