--- a/NEGOCIO/NEGOCIO.csproj
+++ b/NEGOCIO/NEGOCIO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ArticuloNegocio.cs" />
     <Compile Include="GerenteNegocio.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="MesaNegocio.cs" />
     <Compile Include="MeseroNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoArticuloNegocio.cs" />
