--- a/tpc-resto-equipo-17B/tpc-resto-equipo-17B.csproj
+++ b/tpc-resto-equipo-17B/tpc-resto-equipo-17B.csproj
@@ -128,6 +128,7 @@
     <Content Include="Global.asax" />
     <Content Include="ListaMeseros.aspx" />
     <Content Include="ListarGerentes.aspx" />
+    <Content Include="Mesas.aspx" />
     <Content Include="Meseros.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -258,6 +259,13 @@
     </Compile>
     <Compile Include="ListarGerentes.aspx.designer.cs">
       <DependentUpon>ListarGerentes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mesas.aspx.cs">
+      <DependentUpon>Mesas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mesas.aspx.designer.cs">
+      <DependentUpon>Mesas.aspx</DependentUpon>
     </Compile>
     <Compile Include="Meseros.aspx.cs">
       <DependentUpon>Meseros.aspx</DependentUpon>
