--- a/NEGOCIO/NEGOCIO.csproj
+++ b/NEGOCIO/NEGOCIO.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="MesaNegocio.cs" />
     <Compile Include="MeseroNegocio.cs" />
+    <Compile Include="PedidosNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoArticuloNegocio.cs" />
     <Compile Include="UsuarioNegocio.cs" />
